update websocket and token verification